// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should render with all props 1`] = `
.css-0,
[data-css-0] {
  position: absolute;
  left: 15px;
  font-size: 10px;
  opacity: 0;
  transition: all .225s ease-out;
  -webkit-transition: all .225s ease-out;
  -moz-transition: all .225s ease-out;
}

.css-1,
[data-css-1] {
  position: absolute;
  bottom: 2px;
  right: 15px;
}

.css-2,
[data-css-2] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-top: 10px;
  transition: padding-top .225s ease-out;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-2:-webkit-autofill ~ .label,
[data-css-2]:-webkit-autofill ~ .label {
  opacity: 1 !important;
  top: 8px !important;
}

.css-2:-webkit-autofill ~ .checkmark,
[data-css-2]:-webkit-autofill ~ .checkmark {
  opacity: 1 !important;
}

.css-2:-webkit-autofill,
[data-css-2]:-webkit-autofill,
.css-2[data-simulate-webkitautofill],
[data-css-2][data-simulate-webkitautofill] {
  padding-top: 10px !important;
}

.css-6,
[data-css-6] {
  position: absolute;
  top: 16px;
  right: 15px;
  pointer-events: none;
  transition: opacity .225s;
  opacity: 0;
  -webkit-transition: opacity .225s;
  -moz-transition: opacity .225s;
}

.css-7,
[data-css-7] {
  position: relative;
}

.css-8,
[data-css-8] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-9,
[data-css-9] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 10px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #626262;
}

.css-10,
[data-css-10] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 12px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #626262;
}

<div
  data-css-7=""
  data-css-8=""
  style={
    Object {
      "width": "100%",
    }
  }
>
  <input
    aria-required={true}
    data-css-2=""
    defaultValue="string"
    maxLength={1}
    minLength={1}
    name="string"
    onChange={[Function]}
    onInvalid={[Function]}
    pattern="string"
    required={true}
    type="text"
    value="string"
  />
  <div
    className="label"
    data-css-8=""
    data-css-0=""
    style={
      Object {
        "opacity": 1,
        "top": 8,
      }
    }
  >
    <div
      data-css-8=""
      data-css-9=""
    >
      string
       
      *
    </div>
  </div>
  <div
    className="checkmark"
    data-css-6=""
    data-css-8=""
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
      data-css-8=""
      size="xs"
      style={
        Object {
          "fill": "lightGrey",
          "height": 16,
          "stroke": false,
          "width": 16,
        }
      }
    />
  </div>
  <div
    data-css-8=""
    data-css-1=""
  >
    <div
      data-css-10=""
      data-css-8=""
    >
      6
      /
      1
    </div>
  </div>
</div>
`;

exports[`Input component should render with required props only 1`] = `
.css-0,
[data-css-0] {
  position: absolute;
  top: 16px;
  right: 15px;
  pointer-events: none;
  transition: opacity .225s;
  opacity: 0;
  -webkit-transition: opacity .225s;
  -moz-transition: opacity .225s;
}

.css-1,
[data-css-1] {
  position: relative;
}

.css-2,
[data-css-2] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-3,
[data-css-3] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-top: 0;
  transition: padding-top .225s ease-out;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-3:-webkit-autofill ~ .label,
[data-css-3]:-webkit-autofill ~ .label {
  opacity: 1 !important;
  top: 8px !important;
}

.css-3:-webkit-autofill ~ .checkmark,
[data-css-3]:-webkit-autofill ~ .checkmark {
  opacity: 1 !important;
}

.css-3:-webkit-autofill,
[data-css-3]:-webkit-autofill,
.css-3[data-simulate-webkitautofill],
[data-css-3][data-simulate-webkitautofill] {
  padding-top: 10px !important;
}

<div
  data-css-1=""
  data-css-2=""
  style={
    Object {
      "width": "100%",
    }
  }
>
  <input
    aria-required={false}
    data-css-3=""
    name="string"
    onChange={[Function]}
    onInvalid={[Function]}
    required={false}
    type="text"
  />
  <div
    className="checkmark"
    data-css-0=""
    data-css-2=""
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
      data-css-2=""
      size="xs"
      style={
        Object {
          "fill": "lightGrey",
          "height": 16,
          "stroke": false,
          "width": 16,
        }
      }
    />
  </div>
</div>
`;
